# mfrc522-linux

./: .gitignore  .gitmodules  Dockerfile  README.md  activate.sh  bcm2710-rpi-3-b-plus_mfrc522.dts  bcm2710-rpi-3-b-plus_mfrc522_aarch64.dts  buildroot_config  rust_kernel_config
.github/workflows/: coding-style.yml
module/: Makefile  mfrc522.c  mfrc522_command.c  mfrc522_command.h  mfrc522_debug.c  mfrc522_debug.h  mfrc522_module.c  mfrc522_module.h  mfrc522_parser.c  mfrc522_parser.h  mfrc522_spi.c  mfrc522_spi.h  mfrc522_tests.c  mfrc522_user_command.c  mfrc522_user_command.h
rust/: Cargo.toml  Makefile  bindings.h  build.rs.bak  mfrc522.c
rust-module/: Makefile  command.rs  glue.c  mfrc522.rs  mfrc522_spi.rs  module.c  parser.rs
rust-module/mfrc522-rs/: Cargo.toml  mfrc522.h
rust-module/mfrc522-rs/.cargo/: config.toml
rust-module/mfrc522-rs/src/: command.rs  lib.rs  parser.rs  spi.rs
rust-module/mfrc522-rs/src/kernel/: glue.rs  mod.rs
rust-module/mfrc522-rs/src/user_command/: command.rs  executor.rs  mod.rs  parser.rs
rust-module/mfrc522_inner/: command.rs  mod.rs  spi.rs
rust/.cargo/: config.toml
rust/src/: lib.rs
